<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/pass"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/your_pass"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />


    <LinearLayout
        android:id="@+id/topLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass">
        <Button
            android:id="@+id/getSms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_sms" />

        <Button
            android:id="@+id/getLoginToken"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_login_token" />
    </LinearLayout>

    <EditText
        android:id="@+id/sms"
        android:layout_width="318dp"
        android:layout_height="190dp"
        android:ems="10"
        android:foregroundGravity="right"
        android:gravity="start|top"
        android:hint="@string/sms"
        android:inputType="textMultiLine|textNoSuggestions"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/topLayout" />

    <Button
        android:id="@+id/convert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/parse_sms"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sms" />

    <EditText
        android:id="@+id/num1"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/one"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convert" />

    <EditText
        android:id="@+id/num2"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/two"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num1" />

    <EditText
        android:id="@+id/num3"
        android:layout_width="318dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/three"
        android:inputType="number"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num2" />


    <Button
        android:id="@+id/getToken"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_token"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num3" />


</androidx.constraintlayout.widget.ConstraintLayout>